--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">lo</div>
+        </main>
+
+        <aside>
+            <div class="aside-cantainer">lor</div>
+        </aside>
+    </div>
 </body>
 </html>
