--- a/index.html
+++ b/index.html
@@ -213,17 +213,78 @@
                     />
                     <label for="evening">Manhã</label>
                   </div>
-                
+
                   <div class="radio-inner">
-                  <div class="radio-image"></div>
-                  <input
-                    type="radio"
-                    name="study-shift"
-                    value="evening"
-                    id="evening"
-                  />
-                  <img src="assets/icons/sun-02.svg" alt="Icone de sol " />
-                  <label for="evening">Tarde</label>
+                    <div class="radio-image"></div>
+                    <input
+                      type="radio"
+                      name="study-shift"
+                      value="evening"
+                      id="evening"
+                    />
+                    <img src="assets/icons/sun-02.svg" alt="Icone de sol " />
+                    <label for="evening">Tarde</label>
+                  </div>
+                </div>
+
+                <div class="input-wrapper">
+                  <label
+                    >Em qual esporte você gostaria de inscrever seu
+                    filho?</label
+                  >
+
+                  <div class="radio-wrepper">
+                    <div class="radio-inner">
+                      <div class="radio-image"></div>
+                      <input type="radio" name="sport" id="football" />
+                      <img
+                        src="assets/icons/football.svg"
+                        alt="Icone de football"
+                      />
+                      <label for="football">Futebol</label>
+                    </div>
+
+                    <div class="radio-inner">
+                      <div class="radio-image"></div>
+                      <input type="radio" name="sport" id="basketball" />
+                      <img
+                        src="assets/icons/basketball-02.svg"
+                        alt="Icone de basketball"
+                      />
+                      <label for="basketball">Basquete</label>
+                    </div>
+
+                    <div class="radio-inner">
+                      <div class="radio-image"></div>
+                      <input type="radio" name="sport" id="swimming" />
+                      <img
+                        src="assets/icons/swimming.svg"
+                        alt="Icone de Natação"
+                      />
+                      <label for="swimming">Natação</label>
+                    </div>
+
+                    <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="yoga" />
+                    <img src="assets/icons/yoga-02.svg" alt="Icone de yoga" />
+                    <label for="yoga">Yoga</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="volleyball">
+                    <img src="assets/icons/volleyball.svg" alt="Icone de volleyball">
+                    <label for="volleyball">Volei</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="boxing">
+                    <img src="assets/icons/boxing-glove-01.svg" alt="Icone de boxing">
+                    <label for="boxing">Boxe</label>
+                  </div>
+
                 </div>
               </div>
             </fieldset>
