--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     filho?</label
                   >
 
-                  <div class="radio-wrepper">
+                  <div class="radio-wrapper">
                     <div class="radio-inner">
                       <div class="radio-image"></div>
                       <input type="radio" name="sport" id="football" />
@@ -288,6 +288,14 @@
                 </div>
               </div>
             </fieldset>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+
+              <label for="terms">Declaro que li e concordo com os <a href="#">Termos e Condições</a>
+                e com a <a href="#">Política de Privacidade</a> da escola Estrela do Amanhã. </label>
+            </div>
           </form>
         </div>
       </main>
